--- a/predicaments/Modern slavery.html
+++ b/predicaments/Modern slavery.html
@@ -38,7 +38,7 @@
 	<li><strong><a href="../Meaning crisis.html">Meaning crisis</a></strong> - What meaning does life have for a slave? The meaning of the slave's existence is not for the slave to ponder.</li>
 	<li><strong><a href="../Mistreatment of animals.html">Mistreatment of animals</a></strong> - Domesticated animals that aren't eaten are used for milk, eggs, entertainment, work, generally slave-liked existences.</li>
 	<li><strong><a href="../Mistreatment of other humans.html">Mistreatment of other humans</a></strong> - Modern slavery is and further increases mistreatment of humans.</li>
-	<li><strong><a href="../Oppressive tyrannies for the good of its victims.html">Oppressive tyrannies for the good of its victims</a></strong> - BLABLABLA</li>
+	<li><strong><a href="../Oppressive tyrannies for the good of its victims.html">Oppressive tyrannies for the good of its victims</a></strong> - They like being slaves.</li>
 	<li><strong><a href="../Poverty.html">Poverty</a></strong> - Modern slavery is what saves people from poverty by introducing them into the concept known as poverty.</li>
 	<li><strong><a href="../Resources.html">Resources</a></strong> - The modern slavery that most obviously resembles the traditional view of slavery is the conditions of those manually extracting resources from the Earth.</li>
 	<li><strong><a href="../Status.html">Status</a></strong> - Convince some slaves they've climbed higher than others and they might be motivated to keep climbing for generations.</li>
