--- a/predicaments/Moloch.html
+++ b/predicaments/Moloch.html
@@ -109,7 +109,7 @@ To those who question my creation, I'm not real</p>
 	<li><strong><a href="../Mind-body separation.html">Mind-body separation</a></strong> - Moloch's severance.</li>
 	<li><strong><a href="../Misinformation.html">Misinformation</a></strong> - Moloch's confusion.</li>
 	<li><strong><a href="../Mistreatment of animals.html">Mistreatment of animals</a></strong> - Moloch's beasts.</li>
-	<li><strong><a href="../Mistreatment of other humans.html">Mistreatment of other humans</a></strong> - Moloch burdens.</li>
+	<li><strong><a href="../Mistreatment of other humans.html">Mistreatment of other humans</a></strong> - Moloch's burdens.</li>
 	<li><strong><a href="../Modern slavery.html">Modern slavery</a></strong> - Moloch's farm.</li>
 	<li><strong><a href="../Moloch.html">Moloch</a></strong> - Moloch's endless spiral.</li>
 	<li><strong><a href="../Monocultures (agriculture).html">Monocultures (agriculture)</a></strong> - Moloch's epidermis.</li>
