--- a/predicaments/Nuclear war.html
+++ b/predicaments/Nuclear war.html
@@ -5,6 +5,10 @@
 <base target="_top">
 			</head>
 			<h2>Nuclear war</h2>
+			<blockquote>
+				<p>If only I had known, I should have become a watchmaker.</p>
+				<cite>Albert Einstein</cite>
+			</blockquote>
 			<p><strong>Nuclear war is warfare with nuclear weapons</strong>. A nuclear war could destroy everything. How do we find a future when we&#39;re always just a button-press away from the apocalypse?</p>
 <p><strong>Outgoing connections:</strong></p>
 <ul>
@@ -16,7 +20,7 @@
 	<li><strong><a href="../Evil.html">Evil</a></strong> - Ultimate act of evil.</li>
 	<li><strong><a href="../Exponential technology.html">Exponential technology</a></strong> - Almost by definition.</li>
 	<li><strong><a href="../Finite games.html">Finite games</a></strong> - The game to end all games.</li>
-	<li><strong><a href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></strong> - I'd prefer a cyanide asteroid.</li>
+	<li><strong><a href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></strong> - I'd prefer a cyanide asteroid. Actually, that has to be the name of a metal band, no?</li>
 	<li><strong><a href="../Suicide.html">Suicide</a></strong> - Nuclear war is suicide, omnicide.</li>
 	<li><strong><a href="../The desacration of all places.html">The desacration of all places</a></strong> - The end of all life force.</li>
 	<li><strong><a href="../Violence.html">Violence</a></strong> - One final act of violence.</li>
