--- a/predicaments/Oppressive tyrannies for the good of its victims.html
+++ b/predicaments/Oppressive tyrannies for the good of its victims.html
@@ -9,7 +9,7 @@
 <blockquote>
 <p>Of all tyrannies, a tyranny sincerely exercised for the good of its victims may be the most oppressive. It would be better to live under robber barons than under omnipotent moral busybodies. The robber baron's cruelty may sometimes sleep, his cupidity may at some point be satiated; but those who torment us for our own good will torment us without end for they do so with the approval of their own conscience. They may be more likely to go to Heaven yet at the same time likelier to make a Hell of earth. This very kindness stings with intolerable insult.</p>
 <cite>C.S. Lewis</cite>
-</blockquote><p>It is sometimes said that modern nations have two governmental options: <strong>chaos or oppression</strong>. As clear examples, China has chosen oppression and USA has chosen chaos. Of course, there are other alternatives in the spectrum between those options. </p><p>The global economy, social media, and most societies are working under some sort of oppressive system for the good of its people. You are free as long as you stay within the boundaries of the systems you inhabit and, if the systems fail to convince you that they're for your own good, you will have to tackle the fact that they have a monopoly on violence and either force you back into freedom or fully out of it. Good luck to you.</p><p><strong>Outgoing connections:</strong></p>
+</blockquote><p>It is sometimes said that modern nations have two governmental options: <strong>chaos or oppression</strong>. As clear examples, China has chosen oppression and USA has chosen chaos. Of course, there are other alternatives in the spectrum between those options and the one always includes the other. </p><p>The global economy, social media, and most societies are working under some sort of oppressive system for the good of its people. You are free as long as you stay within the boundaries of the systems you inhabit and, if the systems fail to convince you that they're for your own good, you will have to tackle the fact that they have a monopoly on violence and either force you back into freedom or fully out of it. Good luck to you.</p><p><strong>Outgoing connections:</strong></p>
 <ul>
 	<li><strong><a href="../Addiction.html">Addiction</a></strong> - As long as people are addicted and have their addictions met they'll behave and conform. Do you think antidepressants exist for your sake?</li>
 	<li><strong><a href="../Advertising.html">Advertising</a></strong> - How else will you let others know your product is what's truly best for them?</li>
@@ -19,7 +19,7 @@
 	<li><strong><a href="../Chasing happiness.html">Chasing happiness</a></strong> - "I am free and that is why I am lost." - Franz Kafka</li>
 	<li><strong><a href="../Colonialist narratives.html">Colonialist narratives</a></strong> - The tyrants of colonialism are still at large, every day feeding into their history of conquest.</li>
 	<li><strong><a href="../Consumerism.html">Consumerism</a></strong> - You are free to buy whatever you like. If this isn't a sign that you live in the best of worlds, what is?</li>
-	<li><strong><a href="../Distractions.html">Distractions</a></strong> - Keep your victims distracte and they might never notice the iron bars stretching from sunrise to sunset.</li>
+	<li><strong><a href="../Distractions.html">Distractions</a></strong> - Keep your victims distracted and they might never notice the iron bars stretching from sunrise to sunset.</li>
 	<li><strong><a href="../Educational systems.html">Educational systems</a></strong> - "One believes things because one has been conditioned to believe them." - Brave New World, Aldous Huxley</li>
 	<li><strong><a href="../Evil.html">Evil</a></strong> - The darkest evil erupts from a will to do good.</li>
 	<li><strong><a href="../Fear.html">Fear</a></strong> - What happens to me if I refuse to participate?</li>
@@ -57,7 +57,7 @@
 	<li><strong><a href="../Views on human nature.html">Views on human nature</a></strong> - Human nature expresses itself in whatever way the conditions allow it to.</li>
 	<li><strong><a href="../Violence.html">Violence</a></strong> - All oppression is surrounded by a shroud of increasing threats and acts of violence.</li>
 	<li><strong><a href="../Weber's iron cage.html">Weber's iron cage</a></strong> - "One must fight to get to the top, especially if one starts at the bottom." - The Castle, Franz Kafka</li>
-	<li><strong><a href="../Yuppie dystopia.html">Yuppie dystopia</a></strong> - Maybe I should start an OnlyFans as a side hustle?</li>
+	<li><strong><a href="../Yuppie dystopia.html">Yuppie dystopia</a></strong> - Maybe I should start an OnlyFans as a side hustle? Anyone here really into big feet?</li>
 </ul>
 	<br><br><br>
 </body></html>
