--- a/predicaments/Power concentration to the wrong people.html
+++ b/predicaments/Power concentration to the wrong people.html
@@ -10,7 +10,7 @@
 <p>I loved when Bush came out and said, 'We are losing the war against drugs.'  </p>
 <p>You know what that implies? There's a war being fought, and the people on drugs are winning it.</p>
 <cite>Bill Hicks</cite>
-</blockquote><p>For an entity to maintain its existence it is vital that, if power is to concentrate, it concentrates in those groups that have the entity's best in mind. The game theory of capitalism where the only way to not lose power is to win it and keep it, increasing one's optionality and agency while the rest of the entity's options are narrowed. More concretely, people with power and money can do anything as long as they keep that power whereas the majority of the entity fall into a treadmill of working to ensure the maintenance of the higher group's power and financial increase. <strong>If one was to design a system that made sure the worst people climbed to the top, it would be something very close to what we've ended up with</strong>. It is vital that we either change some characteristics of our global economic system to ensure the right people are in power or change the hierarchical structure of the system to allow for more decentralised power structures. </p><blockquote>
+</blockquote><p>For an entity to maintain its existence it is vital that, if power is to concentrate, it concentrates in those groups that have the entity's best in mind. The game theory of capitalism where the only way to not lose power is to win it and keep it, increasing one's optionality and agency while the rest of the entity's options are narrowed. More concretely, people with power and money can do anything as long as they keep that power whereas the majority of the entity fall into a treadmill of working to ensure the maintenance of the higher group's power and financial increase. </p><p><strong>If one was to design a system that made sure the worst people climbed to the top, it would be something very close to what we've ended up with</strong>. It is vital that we either change some characteristics of our global economic system to ensure the right people are in power or change the hierarchical structure of the system to allow for more decentralised power structures. </p><blockquote>
 <p>Only he who has no use for the empire is fit to be entrusted with it.</p>
 <cite>Chuang Tzu</cite>
 </blockquote><p><strong>Outgoing connections:</strong></p><ul>
@@ -27,7 +27,7 @@
 	<li><strong><a href="../Democracy failing.html">Democracy failing</a></strong> - How can we claim to have systems ruled by the people when the people lack any power or agency?</li>
 	<li><strong><a href="../Ego.html">Ego</a></strong> - The ego loves power.</li>
 	<li><strong><a href="../Evil.html">Evil</a></strong> - You either die a hero or live long enough to... Become a venture capitalist?</li>
-	<li><strong><a href="../Exponential technology.html">Exponential technology</a></strong> - Most positions of power in the modern world comes from being the leader within the real of tech development.</li>
+	<li><strong><a href="../Exponential technology.html">Exponential technology</a></strong> - Most positions of power in the modern world comes from being the leader within the realm of tech development.</li>
 	<li><strong><a href="../Finite games.html">Finite games</a></strong> - Winning finite games commonly increases power.</li>
 	<li><strong><a href="../Government.html">Government</a></strong> - What type of person is corruptible enough to remain a politician after all benevolence has been erased?</li>
 	<li><strong><a href="../Greed.html">Greed</a></strong> - Power requires more power.</li>
@@ -49,7 +49,7 @@
 	<li><strong><a href="../Signal-to-noise ratio.html">Signal-to-noise ratio</a></strong> - The majority of powerful leaders spew mostly noise thinking they're all signal.</li>
 	<li><strong><a href="../Status.html">Status</a></strong> - Power and status are often intertwined.</li>
 	<li><strong><a href="../The Dark Triad.html">The Dark Triad</a></strong> - The more you exhibit Dark Triad characteristics, the higher you likely are in the hierarchy of power.</li>
-	<li><strong><a href="../Violence.html">Violence</a></strong> - Violence, in any and all forms, keep people in power through force.</li>
+	<li><strong><a href="../Violence.html">Violence</a></strong> - Violence, in any and all forms, keeps people in power through force.</li>
 	<li><strong><a href="../Virtue signalling.html">Virtue signalling</a></strong> - Powerful people must appear virtuous.</li>
 	<li><strong><a href="../War.html">War</a></strong> - Wars are games of power. But not for those actually fighting in them. Mostly for their respective leaders. Actually, mostly for those selling weapons to the warring entities.</li>
 	<li><strong><a href="../Yuppie dystopia.html">Yuppie dystopia</a></strong> - You just have to love people like Zuck. A white-tailed spider in an almost human-looking costume.</li>
