--- a/predicaments/The Dark Triad.html
+++ b/predicaments/The Dark Triad.html
@@ -5,7 +5,7 @@
 <base target="_top">
 			</head>
 			<h2>The Dark Triad</h2>
-			<p><strong>The Dark Triad of human psychology consists of narcissism, Machiavellianism, and psychopathy</strong>. Briefly explained, the focus on oneself, the ability to play others as pieces on a chess board, and impaired empathy and remorse combined with charm. Exhibit all traits of the dark triad and you&#39;ll most likely be well off in our modern civilisation. Do tell me about your latest raise. </p>
+			<p><strong>The Dark Triad of human psychology consists of narcissism, Machiavellianism, and psychopathy</strong>. Briefly explained, narcissism is the focus on oneself, Machiavellianism is the ability to play others as pieces on a chess board, and psychopathy can mean impaired empathy and remorse, often combined with charm. Exhibit all traits of the dark triad and you'll most likely be well off in our modern civilisation. How many followers do you have on LinkedIn?</p>
 	<p><strong>Outgoing connections:</strong></p><ul>
 		<li><strong><a href="../Animal views.html">Animal views</a></strong> - If we retranslate the three traits of the dark triad we could say the exclusive focus on humans, playing/using animals as tools, slaves, pieces on a board, and... Well, psychopathy still holds unmodified.</li>
 		<li><strong><a href="../Apathy.html">Apathy</a></strong> - Apathy is psychopathic.</li>
@@ -18,7 +18,7 @@
 		<li><strong><a href="../Lack of compassion.html">Lack of compassion</a></strong> - Compassion is mostly opposite to anything related to the dark triad.</li>
 		<li><strong><a href="../Lack of empathy.html">Lack of empathy</a></strong> - Same as with compassion. Empathy and psychopathy are difficult to match.</li>
 		<li><strong><a href="../Lack of humility.html">Lack of humility</a></strong> - Those whose dark triad traits dominate their thinking will keep telling themselves and others that they are, in fact, the most humble.</li>
-		<li><strong><a href="../Missing elders.html">Missing elders</a></strong> - Our elders are adolescent boys preaching stoicism through folded layers of moist eczema.</li>
+		<li><strong><a href="../Missing elders.html">Missing elders</a></strong> - Our current elders are adolescent boys preaching stoicism through folded layers of moist eczema.</li>
 		<li><strong><a href="../Mistreatment of animals.html">Mistreatment of animals</a></strong> - The dark triad traits do not care about other people, why would it then care about animals?</li>
 		<li><strong><a href="../Mistreatment of other humans.html">Mistreatment of other humans</a></strong> - To these people, it isn't even mistreatment.</li>
 		<li><strong><a href="../Moloch.html">Moloch</a></strong> - Moloch's triad.</li>
@@ -27,8 +27,8 @@
 		<li><strong><a href="../No precautionary principle.html">No precautionary principle</a></strong> - Caution? Caution about what? Why would I of all people need to be cautious?</li>
 		<li><strong><a href="../Oppressive tyrannies for the good of its victims.html">Oppressive tyrannies for the good of its victims</a></strong> - Tyrannical behaviour requires dark triad traits.</li>
 		<li><strong><a href="../Polarisation.html">Polarisation</a></strong> - The dark triad polarises, that's how it runs modern democracy.</li>
-		<li><strong><a href="../Power concentration to the wrong people.html">Power concentration to the wrong people</a></strong> - Ranking high in the dark triad is a bit like paying to win in free-to-play MMORPGs.</li>
-		<li><strong><a href="../Selfishness.html">Selfishness</a></strong> - Hand in hand, they strut towards the dusk of humankind.</li>
+		<li><strong><a href="../Power concentration to the wrong people.html">Power concentration to the wrong people</a></strong> - Ranking high in the dark triad is a bit like paying to level up in free-to-play MMORPGs.</li>
+		<li><strong><a href="../Selfishness.html">Selfishness</a></strong> - Hand in hand with themselves, they strut into the sunset of humankind.</li>
 		<li><strong><a href="../Spiritual metacrisis.html">Spiritual metacrisis</a></strong> - The dark triad is spiritual poverty, spiritual bankruptcy. Death of the soul.</li>
 		<li><strong><a href="../Status.html">Status</a></strong> - Status and the dark triad drive each other ever upward.</li>
 		<li><strong><a href="../Violence.html">Violence</a></strong> - The dark triad does not shy away from violence as a means to an end.</li>
