--- a/predicaments/Acceleration.html
+++ b/predicaments/Acceleration.html
@@ -5,7 +5,6 @@
 </head>
 <title>Acceleration</title>
 <h2>Acceleration</h2>
-
 <p><strong>Acceleration means an increase in velocity</strong>. Many things that rapidly approach a multifaceted collapse are constantly accelerating, seemingly unmoved by attempts to halt them. There are many reasons for the acceleration and, to name one, economic growth doesn't just result in acceleration, it demands it for its continuance. </p>
 <blockquote>
 <p>We are flooring it.<br>
@@ -28,35 +27,9 @@ running down our face,<br>
 <em>we'll get there.</em></p>
 </blockquote>
 <p><strong>Outgoing connections:</strong></p><ul>
-<li><a data-href="Debt" href="../Debt.html">Debt</a></li>
-<li><a data-href="Hyperstimuli" href="../Hyperstimuli.html">Hyperstimuli</a></li>
-<li><a data-href="Social media" href="../Social media.html">Social media</a></li>
-<li><a data-href="Attention hijacking" href="../Attention hijacking.html">Attention hijacking</a></li>
-<li><a data-href="Complexity mismatch" href="../Complexity mismatch.html">Complexity mismatch</a></li>
-<li><a data-href="Lack of agency" href="../Lack of agency.html">Lack of agency</a></li>
-<li><a data-href="Sustainable growth" href="../Sustainable growth.html">Sustainable growth</a></li>
-<li><a data-href="Carelessness" href="../Carelessness.html">Carelessness</a></li>
-<li><a data-href="Ignorance of ongoing collapse" href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></li>
-<li><a data-href="Lack of attentiveness" href="../Lack of attentiveness.html">Lack of attentiveness</a></li>
-<li><a data-href="Directionlessness" href="../Directionlessness.html">Directionlessness</a></li>
-<li><a data-href="Sense-making crisis" href="../Sense-making crisis.html">Sense-making crisis</a></li>
-<li><a data-href="Artificial Intelligence" href="../Artificial Intelligence.html">Artificial Intelligence</a></li>
-<li><a data-href="Capitalism" href="../Capitalism.html">Capitalism</a></li>
-<li><a data-href="Ecological crisis" href="../Ecological crisis.html">Ecological crisis</a></li>
-<li><a data-href="Energy" href="../Energy.html">Energy</a></li>
-<li><a data-href="Exponential technology" href="../Exponential technology.html">Exponential technology</a></li>
-<li><a data-href="Growth" href="../Growth.html">Growth</a></li>
-<li><a data-href="Inertia" href="../Inertia.html">Inertia</a></li>
-<li><a data-href="Lack of time" href="../Lack of time.html">Lack of time</a></li>
-<li><a data-href="Limits to growth" href="../Limits to growth.html">Limits to growth</a></li>
-<li><a data-href="No precautionary principle" href="../No precautionary principle.html">No precautionary principle</a></li>
-<li><a data-href="Planetary boundaries" href="../Planetary boundaries.html">Planetary boundaries</a></li>
-<li><a data-href="Populations entering the 'middle class'" href="../Populations entering the 'middle class'.html">Populations entering the 'middle class'</a></li>
-<li><a data-href="Social erosion" href="../Social erosion.html">Social erosion</a></li>
-<li><a data-href="Tipping points" href="../Tipping points.html">Tipping points</a></li>
-<li><a data-href="Too much speed and noise" href="../Too much speed and noise.html">Too much speed and noise</a></li>
-<li><a data-href="Transportation infrastructure" href="../Transportation infrastructure.html">Transportation infrastructure</a></li>
-<li><a data-href="Violence" href="../Violence.html">Violence</li>
+	<li><strong><a href="../Addiction.html">Addiction</a></strong> - BLABLA</li>
+
+
 </ul>
 <br>
 <br>
