--- a/predicaments/Artificial Intelligence.html
+++ b/predicaments/Artificial Intelligence.html
@@ -6,6 +6,7 @@
 <base target="_top">
 </head>
 <h2>Artificial intelligence</h2>
+<blockquote><p>The strange flavour of AI work is that people try to put together long sets of rules in strict formalisms which tell inflexible machines how to be flexible.</p><cite>Douglas Hofstadter</cite></blockquote>
 <p><strong><a href="https://en.wikipedia.org/wiki/Artificial_intelligence">Artificial intelligence is intelligence exhibited by machines, particularly computer systems</a></strong>. The general structure of an artificial intelligence is something that perceives, learns from what it perceives, and produces some output out of that learning. </p>
 <blockquote>
 <p>I am so clever that sometimes I don't understand a single word of what I am saying.</p>
