Add some images

--- a/predicaments/Lack of quiet spaces.html
+++ b/predicaments/Lack of quiet spaces.html
@@ -6,6 +6,7 @@
 <base target="_top">
 </head>
 <h2>Lack of quiet spaces</h2>
+<img src="../img/quiet.png" width="100%">
 <blockquote>
 <p>The issue which I propose for discussion should therefore be clear: how to counter the encroachment of new, electronic devices and systems upon commons that are more subtle and more intimate to our being than either grassland or roads - commons that are at least as valuable as silence. Silence, according to western and eastern tradition alike, is necessary for the emergence of persons. It is taken from us by machines that ape people. We could easily be made increasingly dependent on machines for speaking and for thinking, as we are already dependent on machines for moving.</p>
 <cite>Ivan Illich, Silence as a Commons</cite>
