--- a/predicaments/Status.html
+++ b/predicaments/Status.html
@@ -6,6 +6,7 @@
 <base target="_top">
 </head>
 <h2>Status</h2>
+<img src="../img/status.png" width="100%">
 <blockquote>
 <p>For many generations…they obeyed the laws and loved the divine to which they were akin…they reckoned that qualities of character were far more important than their present prosperity. So they bore the burden of their wealth and possessions lightly, and did not let their high standard of living intoxicate them or make them lose their self-control…  </p>
 <p>But when the divine element in them became weakened…and their human traits became predominant, they ceased to be able to carry their prosperity with moderation.</p>
