--- a/predicaments/List of possibilities.html
+++ b/predicaments/List of possibilities.html
@@ -229,6 +229,16 @@
 <li>Infraculture</li>
 <li>Pockets of habitability</li>
 <li>Social caustics</li>
+<li>Everyone can be who they are</li>
+<li>Individual and noble truths</li>
+<li>Story-telling</li>
+<li>Elders</li>
+<li>The sublime</li>
+<li>New life</li>
+<li>Education</li>
+<li>Parenting</li>
+<li>Drinkable rivers</li>
+</li>
 </ol>
 <br>
 <br>
