Images and links

--- a/predicaments/Acceleration.html
+++ b/predicaments/Acceleration.html
@@ -27,9 +27,25 @@ running down our face,<br>
 <em>we'll get there.</em></p>
 </blockquote>
 <p><strong>Outgoing connections:</strong></p><ul>
-	<li><strong><a href="../Addiction.html">Addiction</a></strong> - BLABLA</li>
-
-
+	<li><strong><a href="../Carelessness.html">Carelessness</a></strong> - Brick on the accelerator, surely you know there is no time to break if someone jumps onto the road?</li>
+	<li><strong><a href="../Catastrophic risks.html">Catastrophic risks</a></strong> - The probability of a catastrophic event occurring increases with speed and so does its catastrophic magnitude.</li>
+	<li><strong><a href="../Climate change.html">Climate change</a></strong> - Despite allegedly attempting to halt it we are currently still accelerating climate change.</li>
+	<li><strong><a href="../Debt.html">Debt</a></strong> - Acceleration drives debt and debt allows maintained acceleration.</li>
+	<li><strong><a href="../Directionlessness.html">Directionlessness</a></strong> - Not only does the propelling forward-force make it difficult to steer, we've lost our sense of direction and the GPS just broke.</li>
+	<li><strong><a href="../End of history.html">End of history</a></strong> - In hindsight it might look like all we wanted was for the collapse to be over and done with as quickly as possible.</li>
+	<li><strong><a href="../Energy consumption increasing.html">Energy consumption increasing</a></strong> - Unfortunately for us, we are not in a vacuum. This means that the faster we move, the more energy is required to accelerate.</li>
+	<li><strong><a href="../Energy.html">Energy</a></strong> - We must accelerate our energy extraction so that we can keep accelerating our energy consumption in order to... Wait, what was it again? Was it progress? Or pay debt? I've forgotten. Something about retirement?</li>
+	<li><strong><a href="../Exponential technology.html">Exponential technology</a></strong> - Exponential developments definitionally require some sort of accelerative property. This one is two-fold. Actors are accelerating development to be the first to arrive at certain exponential technologies and those technologies will then contribute with additional multipliers to our acceleration.</li>
+	<li><strong><a href="../Growth.html">Growth</a></strong> - The growth imperative requires acceleration. Acceleration is what drives growth.</li>
+	<li><strong><a href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></strong> - We're stuck in the backseat gazing at the raindrop race of acid rain on the window.</li>
+	<li><strong><a href="../Inertia.html">Inertia</a></strong> - Each second spent with our foot on the accelerator increases the time it would take to stop were we to ease off the pedal.</li>
+	<li><strong><a href="../Lack of the longterm.html">Lack of the longterm</a></strong> - Our constant acceleration makes the future ever more uncertain.</li>
+	<li><strong><a href="../Lack of time.html">Lack of time</a></strong> - Aren't we already too late?</li>
+	<li><strong><a href="../Naive progress narrative.html">Naive progress narrative</a></strong> - We're moving so fast! Surely you can't mean that this is a sign of anything other than progress?</li>
+	<li><strong><a href="../Profit.html">Profit</a></strong> - Acceleration generates profit and to stay profitable one must keep accelerating.</li>
+	<li><strong><a href="../Sense-making crisis.html">Sense-making crisis</a></strong> - Nigh on impossible to make sense of the landscape when one passes through it at Mach 3.</li>
+	<li><strong><a href="../Tipping points.html">Tipping points</a></strong> - We appear to be rushing towards tipping points on multiple fronts.</li>
+	<li><strong><a href="../Too much speed and noise.html">Too much speed and noise</a></strong> - Sorry, what was that? I can't hear you over the sound of my 2006 Hyundai Getz.</li>
 </ul>
 <br>
 <br>
