--- a/predicaments/Ancient sunlight, old sunlight, current sunlight.html
+++ b/predicaments/Ancient sunlight, old sunlight, current sunlight.html
@@ -5,6 +5,7 @@
 		</head>
 		<title>Ancient sunlight, old sunlight, current sunlight</title>
 		<h2>Ancient sunlight, old sunlight, current sunlight</h2>
+		<img src="../img/oil.png" width="100%">
 
 		<p><strong>All of our energy originally comes from sunlight</strong>. The industrial revolution was in many ways made possible by the extraction and utilisation of stored ancient sunlight in the form of oil. How we choose to divide our usage of ancient, old, and current sunlight is one way of looking at managing our energy predicament.</p>
 
