--- a/predicaments/Culture wars.html
+++ b/predicaments/Culture wars.html
@@ -6,6 +6,7 @@
 <base target="_top">
 </head>
 <h2>Culture wars</h2>
+<img src="../img/culturewar.png" width="100%">
 <blockquote>
 <p>The wave of the future is not the conquest of the world by a single dogmatic creed but the liberation of the diverse energies of free nations and free men.</p>
 <cite>John F. Kennedy</cite>
