--- a/predicaments/Lack of the longterm.html
+++ b/predicaments/Lack of the longterm.html
@@ -5,16 +5,50 @@
 <base target="_top">
 			</head>
 			<h2>Lack of the longterm</h2>
+			<img src="../img/seasons.png" width="100%">
 			<p>Modernity is controlled by the economic system and, in extension, politicians, institutions, business corporations, and the market. Most political terms are four years and in finance there is often talk of seven year market cycles. Most large-scale decisions fall within this range of time. It is unquestionable that <strong>we have a tendency to focus on the short-term</strong>. The seven year market cycle can be contrasted with something believed to originate in the Great Law of the Iroquois, namely the seven generation stewardship. This <a href="https://en.wikipedia.org/wiki/Seven_generation_sustainability">concept urges the current generation to live and work for the benefit of the seventh generation into the future</a>. What would we do differently if we lived and worked to benefit the seventh generation into the future?</p>
 <p><strong>Outgoing connections:</strong></p><ul>
-<li><a data-href="Lack of a living world view" href="../Lack of a living world view.html">Lack of a living world view</a></li>
-<li><a data-href="Poisoning the water, the earth, the air" href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></li>
-<li><a data-href="Ignorance of interconnectedness" href="../Ignorance of interconnectedness.html">Ignorance of interconnectedness</a></li>
-<li><a data-href="Lack of visions" href="../Lack of visions.html">Lack of visions</a></li>
-<li><a data-href="Directionlessness" href="../Directionlessness.html">Directionlessness</a></li>
-<li><a data-href="Lack of purpose" href="../Lack of purpose.html">Lack of purpose</a></li>
-<li><a data-href="Mass climate migration" href="../Mass climate migration.html">Mass climate migration</a></li>
-<li><a data-href="Migration" href="../Migration.html">Migration</a></li>
-<li><a data-href="Resource conflicts" href="../Resource conflicts.html">Resource conflicts</li></ul>
+	<li><strong><a href="../Acceleration.html">Acceleration</a></strong> - If we don't care about the longterm we might just as well go faster.</li>
+	<li><strong><a href="../Access to food.html">Access to food</a></strong> - Do we have longterm methods for securing our access to food?</li>
+	<li><strong><a href="../Access to water.html">Access to water</a></strong> - Do we have longterm methods for securing our access to drinking water?</li>
+	<li><strong><a href="../Agriculture.html">Agriculture</a></strong> - Do we have longterm methods for indefinitely sustainable agriculture?</li>
+	<li><strong><a href="../Ancient sunlight, old sunlight, current sunlight.html">Ancient sunlight, old sunlight, current sunlight</a></strong> - Do we have longterm methods for how we're using ancient, old, and current sunlight?</li>
+	<li><strong><a href="../Catastrophic risks.html">Catastrophic risks</a></strong> - We are somehow rushing head-first towards catastrophic risks that we are aware of but for some reason we don't seem to mind.</li>
+	<li><strong><a href="../Climate change.html">Climate change</a></strong> - Climate change is largely driven by a lack of longterm thinking.</li>
+	<li><strong><a href="../Dealing with death.html">Dealing with death</a></strong> - Our lack of longterm thinking must surely be deeply connected to our unwillingness to think about our own death.</li>
+	<li><strong><a href="../Debt.html">Debt</a></strong> - A debt is a promise of a better future, yet we seem unable to realistically think of a longterm future where any debt can ever be paid.</li>
+	<li><strong><a href="../Directionlessness.html">Directionlessness</a></strong> - Without any longterm destination in mind, longterm thinking about direction isn't even relevant.</li>
+	<li><strong><a href="../Electric vehicle solutions.html">Electric vehicle solutions</a></strong> - There it is everyone, we did it. With electric vehicles we can finally continue with whatever it is we're doing for the rest of time. Finally.</li>
+	<li><strong><a href="../End of history.html">End of history</a></strong> - With our disrespect for the past and the longterm future we will enact an implosion of history.</li>
+	<li><strong><a href="../Energy.html">Energy</a></strong> - Do we have longterm methods for securing our access to energy?</li>
+	<li><strong><a href="../Failure to take responsibility.html">Failure to take responsibility</a></strong> - Without any longterm thinking it becomes impossible to take responsibility for any future consequences of present day decisions and actions.</li>
+	<li><strong><a href="../Faulty meta-optimisation.html">Faulty meta-optimisation</a></strong> - When deciding what to optimise for in life and society we have somehow forgotten how to live in the present moment while simultaneously losing all sense of longterm direction. Do we even exist?</li>
+	<li><strong><a href="../Finite games.html">Finite games</a></strong> - Finite games seldom benefit from longterm thinking. Unless you want to count Warren Buffett as a longterm thinker. If he is, he's still a massive asshole in my book.</li>
+	<li><strong><a href="../Government.html">Government</a></strong> - A successful politician is not one who focuses on any longterm issues. The longest term is commonly four years.</li>
+	<li><strong><a href="../Growth.html">Growth</a></strong> - An imperative to grow indefinitely? Yeah, I don't see why that shouldn't work.</li>
+	<li><strong><a href="../Ignorance of ongoing collapse.html">Ignorance of ongoing collapse</a></strong> - If one begins to think even tiny bit longterm, one sees that things aren't really going according to plan. Not that there has ever been a plan... But still.</li>
+	<li><strong><a href="../Ignored externalities.html">Ignored externalities</a></strong> - Most gains are short-term and most externalities are longer-term so why bother?</li>
+	<li><strong><a href="../Investing.html">Investing</a></strong> - No financial investment, no matter how longterm you claim it do be, is not sufficiently longterm to be compatible with any desirable future.</li>
+	<li><strong><a href="../Jevons paradox.html">Jevons paradox</a></strong> - Every longterm technological attempt to increase efficiencies seem wholly ignorant of Jevons paradox.</li>
+	<li><strong><a href="../Lack of attentiveness.html">Lack of attentiveness</a></strong> - Ignoring the longterm is often linked with not paying attention to the broader short or long term effects of actions and decisions.</li>
+	<li><strong><a href="../Lack of balance.html">Lack of balance</a></strong> - Do we have longterm methods to ensure things are kept in balance?</li>
+	<li><strong><a href="../Lack of time.html">Lack of time</a></strong> - We're too short on time to think about the far future.</li>
+	<li><strong><a href="../Lack of visions.html">Lack of visions</a></strong> - Without longterm thinking we've lost visions of the future.</li>
+	<li><strong><a href="../Material extraction.html">Material extraction</a></strong> - Do we have longterm methods for securing our access to necessary materials?</li>
+	<li><strong><a href="../Microplastics.html">Microplastics</a></strong> - Do we have longterm methods for managing the spreading of microplastics?</li>
+	<li><strong><a href="../No precautionary principle.html">No precautionary principle</a></strong> - Without longterm thinking there will never be any points in favour of caution.</li>
+	<li><strong><a href="../No value in maintenance.html">No value in maintenance</a></strong> - Maintenance and longterm thinking go hand in hand.</li>
+	<li><strong><a href="../Only 'can we' never 'should we'.html">Only 'can we' never 'should we'</a></strong> - Consequences are irrelevant to those who lack longterm thinking.</li>
+	<li><strong><a href="../Parenting.html">Parenting</a></strong> - The short-term bliss of silence following the handing over of an iPad to a toddler seems incomparable to its longterm effects.</li>
+	<li><strong><a href="../Poisoning the water, the earth, the air.html">Poisoning the water, the earth, the air</a></strong> - Do we have longterm methods to heal the planet from the poison? Or maybe begin with halting the poisoning?</li>
+	<li><strong><a href="../Quantification.html">Quantification</a></strong> - Bigger number. Better future.</li>
+	<li><strong><a href="../Resources.html">Resources</a></strong> - Do we have longterm methods of securing our access to resources necessary for life?</li>
+	<li><strong><a href="../Sense-making crisis.html">Sense-making crisis</a></strong> - With the inability to consider the longterm we end up incapable of making sense of anything at all.</li>
+	<li><strong><a href="../Social media.html">Social media</a></strong> - The adoption of social media was so innocent, ignorant, naive, and almost cute. Too bad it helped polarise the world and facilitate the end of the world as we know it. Zuck it up.</li>
+	<li><strong><a href="../Suicide.html">Suicide</a></strong> - I'm proud of a decision I took as a teenager. I decided to not commit suicide until I was 25. That little dose of longterm thinking ended up with me being 25 and having completely forgotten about suicide and now here I am many years later. Without any longterm broader considerations suicide can sound comforting.</li>
+	<li><strong><a href="../Sustainable growth.html">Sustainable growth</a></strong> - Most principles of sustainable growth are suggested by people unable to decide what to eat for lunch before it comes out of their asses.</li>
+	<li><strong><a href="../Unbalanced longtermism.html">Unbalanced longtermism</a></strong> - The few examples you get of longterm thinking in mainstream media is so ridiculously unbalanced and non-longtermistic that I am unsure of whether to laugh or cry.</li>
+	<li><strong><a href="../Wisdom crisis.html">Wisdom crisis</a></strong> - Our inability for anything longterm is one of the roots of our crisis of missing wisdom.</li>
+	<li><strong><a href="../Yuppie dystopia.html">Yuppie dystopia</a></strong> - Stay sexy, fellow yuppies. I brought sushi.</li>
 	<br><br><br>
 </body></html>
