--- a/predicaments/Sex and sexuality.html
+++ b/predicaments/Sex and sexuality.html
@@ -9,7 +9,10 @@
 <blockquote>
 <p><a data-tooltip-position="top" aria-label="https://bloodknife.com/everyone-beautiful-no-one-horny/" class="external-link" href="https://bloodknife.com/everyone-beautiful-no-one-horny/" target="_blank">Everyone is beautiful and no one is horny</a>.</p>
 <cite>R.S. Benedict</cite>
-</blockquote><p><strong>Sex and sexuality have become both increasingly free and increasingly complicated</strong>, especially for young people and maybe even more so with the ease of access to intentional and unintentional pornography in all media.</p><p><strong>Outgoing connections:</strong></p><ul>
+</blockquote>
+<p><strong>Sex and sexuality have become both increasingly free and increasingly complicated</strong>, especially for young people and maybe even more so with the ease of access to intentional and unintentional pornography in all media.</p>
+<img src="../img/sex.png" width="100%">
+<p><strong>Outgoing connections:</strong></p><ul>
 <li><a data-href="Addiction" href="../Addiction.html">Addiction</a></li>
 <li><a data-href="Chasing happiness" href="../Chasing happiness.html">Chasing happiness</a></li>
 <li><a data-href="Finite games" href="../Finite games.html">Finite games</a></li>
