--- a/predicaments/Cognitive dissonance.html
+++ b/predicaments/Cognitive dissonance.html
@@ -6,8 +6,9 @@
 <base target="_top">
 </head>
 <h2>Cognitive dissonance</h2>
+<img src="../img/ignorance_of_collapse.png" width="100%">
 <p><strong>Cognitive dissonance is an experience of disturbance felt when beliefs and actions are contradictory</strong>, when the coherence between intentions and effects is lost to such an extent that the harmony between who you think you are, or want to be, clashes with what you actually do. This disturbance or discomfort can be approached in two ways. The first and potentially most prevalent method is to somehow modify, justify, or twist the inner workings to still somehow fit with your behaviour. Rationalisations, selective perception, and selection of confirming evidence are some methods of reducing cognitive dissonance, incoherence, and internal inconsistencies in general. The second method is to meet your cognitive dissonances head-on, firstly coming to terms with the fact that you aren&#39;t fully responsible for the tuning of the orchestra, and then working towards harmonious actions with the inherent impossibility of that asymptotic striving, resting in knowing that practice is enlightenment.</p>
-<p>If we&#39;re all hypocrits, what will you do about it? Always keep in mind the spectral nature of any duality, nothing is purely dissonant or purely harmonious, the gap between them is a wondrous pilgrimage to spend one&#39;s life on. Be especially kind to those you meet on the way who seem the most dissonant, they might never have heard the blackbird over the screaming chainsaws.</p>
+<p>If we're all hypocrits, what will you do about it? Always keep in mind the spectral nature of any duality, nothing is purely dissonant or purely harmonious, the gap between them is a wondrous pilgrimage to spend one&#39;s life on. Be especially kind to those you meet on the way who seem the most dissonant, they might never have heard the blackbird over the screaming chainsaws.</p>
 <blockquote>
 <p>It's not the note you play that's the wrong note - it's the note you play afterwards that makes it right or wrong.</p>
 <cite>Miles Davis</cite>
