--- a/predicaments/updates.html
+++ b/predicaments/updates.html
@@ -5,6 +5,8 @@
         </head>
 <title>Updates</title>
 <h2>Updates</h2>
+<h3>2025-01-19 Everything will break...</h3>
+<p>I don't think you can see it yet. Maybe you can. Somewhere behind the blank dead stare of strangers and friends glad to be unhappy. They're breaking and so are you. Everything stapled onto dreamy castles of dust built on clouds of stale nitrogen nightmares will crack and fall and with so far to fall there's no wonder you see others breaking in the fall, violent explosions of feathers, black and white, and splinters of bone. No bother. Everything will break. One day you will awake and all you know will be undone and when you look around you there will be nothing left except your two feet and the ground to stand on. With luck you'll be there, I'll be there, and we can look up at the blank death of space, the living breathing pulsating milky way sweeping across a blackness filled with nothing but hairpin cracks of light. To my sister, father, mother, wife, Romeo, Hilma, and new life unborn, the only way to mend is for everything to break.</p>
 <h3>2025-01-09 Update & Future Work</h3>
 <p>The work with this landscape is at a standstill. Certain conditions have lead to me having to focus on applying for jobs and this process seems to zap all energy from me. However, the work proceeds mentally and some aspects of this landscape are becoming clear.</p>
 <h4>The Links</h4>
