Total remake fix

--- a/content/Architecture.html
+++ b/content/Architecture.html
@@ -1,6 +1,6 @@
 ﻿<title>Architecture</title>
 <h2>Architecture</h2>
-<img src="img/architecture.jpg" width="100%"><br>
+<img src="img/architecture.png" width="100%"><br>
 <blockquote>
 <p>The specific patterns, out of which a building or a town is made<br>
 may be alive or dead. To the extent they are alive, they let our inner<br>
