--- a/content/Meditation.html
+++ b/content/Meditation.html
@@ -1,6 +1,6 @@
 ﻿<title>Meditation</title>
 <h2>Meditation</h2>
-<img src="img/meditation.jpg" width="100%"><br>
+<img src="img/meditation.png" width="100%"><br>
 <br>
 <br>
 <br>
