--- a/content/Salvaging the ruins.html
+++ b/content/Salvaging the ruins.html
@@ -1,6 +1,6 @@
 ﻿<title>Salvaging the ruins</title>
 <h2>Salvaging the ruins</h2>
-<img src="img/salvaging.jpg" width="100%"><br>
+<img src="img/salvaging.png" width="100%"><br>
 <p>The Exchange from Always Coming Home?</p>
 <blockquote>
 <p><strong>Salvage</strong> the good things we have a chance of taking with us; <strong>mourn</strong> the good things we're not able to take with us, and tell their stories; <strong>notice</strong> the things that were never as good as we told each other they were, and the chance we're being given to leave these behind; and <strong>pick up the dropped threads</strong> from earlier in the story, the practices that were marked as "old-fashioned", "inefficient" or "obsolete", but which may yet make all the difference.</p>
