--- a/content/The erotic.html
+++ b/content/The erotic.html
@@ -1,6 +1,6 @@
 ﻿<title>The erotic</title>
 <h2>The erotic</h2>
-<img src="img/erotic.jpg" width="100%"><br>
+<img src="img/erotic.png" width="100%"><br>
 <blockquote>
 <p>Eroticism challenges us to seek a different kind of resolution, to surrender to the unknown and ungraspable, and to breach the confines of the rational world. - Esther Perel</p>
 </blockquote>
