--- a/content/Unbalanced longtermism.html
+++ b/content/Unbalanced longtermism.html
@@ -1,6 +1,6 @@
 ﻿<title>Unbalanced longtermism</title>
 <h2>Unbalanced longtermism</h2>
-<img src="img/rocket.jpg" width="100%"><br>
+<img src="img/rocket.png" width="100%"><br>
 <blockquote>
 <p>Real generosity towards the future lies in giving all to the present.</p>
 <br>Albert Camus</p>
