--- a/content/Pollution.html
+++ b/content/Pollution.html
@@ -1,6 +1,6 @@
 ﻿<title>Pollution</title>
 <h2>Pollution</h2>
-<img src="img/pollution_sunset.jpg" width="100%"><br>
+<img src="img/pollution_sunset.png" width="100%"><br>
 <blockquote>
 <p>Like a man who has been dying for many days, a man in your city is numb to the stench.</p>
 <br>Chief Si'ahl</p>
